tailscale-oke/pi-tailscale-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: tailscale-pi
  name: tailscale-pi
