tailscale-oke/forgejo-egress-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-egress
  namespace: tailscale-pi
  annotations:
    tailscale.com/tailnet-fqdn: forgejo-forgejo-tailscale.giraffe-carp.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
  - protocol: TCP
    port: 3000
