tailscale-oke/gitea-egress-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-egress
  namespace: tailscale-pi
  annotations:
    tailscale.com/tailnet-fqdn: gitea-gitea-tailscale.giraffe-carp.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
  - protocol: TCP
    port: 2283
