tailscale-oke/id-egress-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: id-egress
  namespace: tailscale-pi
  annotations:
    tailscale.com/tailnet-fqdn: pocket-id-pocket-id-tailscale.giraffe-carp.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
  - protocol: TCP
    port: 2283
