tailscale-oke/immich-egress-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-egress
  namespace: tailscale-pi
  annotations:
    tailscale.com/tailnet-fqdn: immich-immich-tailscale.giraffe-carp.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
  - protocol: TCP
    port: 2283
