tailscale-oke/pi-flux-ui-service-egress-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-ip: 100.110.121.81
  name: flux-ui-pi
  namespace: tailscale-pi
spec:
  externalName: placeholder # will be replaced by operator
  type: ExternalName
