tailscale-oke/pi-nfs.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: ton00.giraffe-carp.ts.net
  name: pi-nfs
  namespace: tailscale-pi
spec:
  externalName: placeholder # will be replaced by operator
  type: ExternalName
