tailscale-oke/rustfs-s3-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-egress
  namespace: tailscale-pi
  annotations:
    tailscale.com/tailnet-fqdn: rustfs-s3-tailscale.giraffe-carp.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
  - protocol: TCP
    port: 9000
