tailscale-oke/seafile-egress-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile-egress
  namespace: tailscale-pi
spec:
  type: ExternalName
  externalName: seafile-seafile-tailscale.giraffe-carp.ts.net
  ports:
  - protocol: TCP
    port: 80
