tailscale-oke/vaultwarden-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-egress
  namespace: tailscale-pi
  annotations:
    tailscale.com/tailnet-fqdn: vaultwarden-vaultwarden-tailscale.giraffe-carp.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
  - protocol: TCP
    port: 80
