tailscale-oke/vaultwarden-masterless-demo-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-masterless-demo-egress
  namespace: tailscale-pi
  annotations:
    tailscale.com/tailnet-fqdn: vaultwarden-masterless-demo-vaultwarden-tailscale.giraffe-carp.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-masterless-kc-demo-egress
  namespace: tailscale-pi
  annotations:
    tailscale.com/tailnet-fqdn: vaultwarden-masterless-kc-demo-vaultwarden-tailscale.giraffe-carp.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
  - protocol: TCP
    port: 8080
