tailscale-oke/vikunja-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-egress
  namespace: tailscale-pi
  annotations:
    tailscale.com/tailnet-fqdn: vikunja-vikunja-tailscale.giraffe-carp.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
  - protocol: TCP
    port: 10220
