tailscale-oke/pi-flux-ui-service-ingress.yaml
# kind: Service
# apiVersion: v1
# metadata:
#   name: flux-ui-pi
#   namespace: tailscale
# spec:
#   ports:
#     - name: https
#       port: 443
#       protocol: TCP
#       targetPort: https
#   # clusterIP: None
#   # type: ExternalName
#   # sessionAffinity: None
#   # externalName: pi-flux-ui-ingress.giraffe-carp.ts.net
# ---
# kind: EndpointSlice
# apiVersion: discovery.k8s.io/v1
# metadata:
#   name: flux-ui-pi
#   namespace: tailscale
#   labels:
#     kubernetes.io/service-name: "flux-ui-pi"
# addressType: FQDN
# ports:
#   - name: https
#     port: 443
#     protocol: TCP
# endpoints:
#   - addresses:
#       - "pi-flux-ui-ingress.giraffe-carp.ts.net"
#     conditions:
#       ready: true
# ---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: flux-ui-pi-ingress
  namespace: tailscale-pi
  annotations:
    nginx.org/client-max-body-size: "1024m"
    kubernetes.io/ingress.allow-http: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - flux-pi.lag0.com.br
      secretName: flux-pi-lag0
  rules:
    - host: flux-pi.lag0.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: flux-ui-pi
                port: 
                  number: 9001
  ingressClassName: nginx
