tailscale-oke/vaultwarden-masterless-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-masterless-demo-ingress
  namespace: tailscale-pi
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.org/client-max-body-size: 10000m
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "5"
spec:
  tls:
  - hosts:
      - vaultwarden-masterless-demo.lag0.com.br
    secretName: lag0-wildcard-certificate-secret
  rules:
  - host: vaultwarden-masterless-demo.lag0.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-masterless-demo-egress
            port:
              number: 80
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-masterless-kc-demo-ingress
  namespace: tailscale-pi
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.org/client-max-body-size: 10000m
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "5"
spec:
  tls:
  - hosts:
      - vaultwarden-masterless-kc-demo.lag0.com.br
    secretName: lag0-wildcard-certificate-secret
  rules:
  - host: vaultwarden-masterless-kc-demo.lag0.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-masterless-kc-demo-egress
            port:
              number: 80
  ingressClassName: nginx
